--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,7 @@
     <ContinuousIntegrationBuild Condition="'$(CI)' == 'true' or '$(GITHUB_ACTIONS)' == 'true'">true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
-  <PropertyGroup Condition="$([System.String]::Copy('$(MSBuildProjectName)').StartsWith('Liaison.Messaging.')) and '$(IsPackable)' != 'false'">
+  <PropertyGroup Condition="$([System.String]::Copy('$(MSBuildProjectName)').StartsWith('Liaison.Messaging.')) and !$([System.String]::Copy('$(MSBuildProjectName)').EndsWith('.Tests')) and '$(IsPackable)' != 'false'">
     <VersionPrefix>0.1.0</VersionPrefix>
     <Authors>asp2286</Authors>
     <RepositoryUrl>https://github.com/asp2286/Liaison.Messaging</RepositoryUrl>
