--- a/src/Liaison.Messaging.Abstractions/Liaison.Messaging.Abstractions.csproj
+++ b/src/Liaison.Messaging.Abstractions/Liaison.Messaging.Abstractions.csproj
@@ -5,4 +5,9 @@
     <PackageId>Liaison.Messaging.Abstractions</PackageId>
     <Description>Provider-agnostic contracts for Liaison.Messaging.</Description>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+  </ItemGroup>
 </Project>
