--- a/tests/Liaison.Messaging.Tests/Liaison.Messaging.Tests.csproj
+++ b/tests/Liaison.Messaging.Tests/Liaison.Messaging.Tests.csproj
@@ -1,15 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <IsTestProject>true</IsTestProject>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="../../src/Liaison.Messaging.Abstractions/Liaison.Messaging.Abstractions.csproj" />
     <ProjectReference Include="../../src/Liaison.Messaging.Core/Liaison.Messaging.Core.csproj" />
-    <ProjectReference Include="../../src/Liaison.Messaging.DependencyInjection/Liaison.Messaging.DependencyInjection.csproj" />
     <ProjectReference Include="../../src/Liaison.Messaging.InMemory/Liaison.Messaging.InMemory.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="xunit" Version="2.9.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
